# docs/swagger.yaml
@@ -34,6 +34,7 @@ definitions:
         type: string
     required:
     - login
+    - name
     - role
     type: object
   requests.UpdateProfileRequest:
@@ -58,11 +59,45 @@ definitions:
     required:
     - error
     type: object
+  response.GetMeResponse:
+    properties:
+      account_id:
+        type: string
+      description:
+        type: string
+      email:
+        type: string
+      login:
+        type: string
+      name:
+        type: string
+      photo:
+        type: string
+      profile_id:
+        type: string
+    type: object
   response.SaveProfileResponse:
     properties:
       access_token:
         type: string
       refresh_token:
+        type: string
+    type: object
+  response.UpdateProfileResponse:
+    properties:
+      account_id:
+        type: string
+      description:
+        type: string
+      email:
+        type: string
+      login:
+        type: string
+      name:
+        type: string
+      photo:
+        type: string
+      profile_id:
         type: string
     type: object
 info:
@@ -115,7 +150,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Profile'
+            $ref: '#/definitions/response.UpdateProfileResponse'
         "400":
           description: Bad Request
           schema:
@@ -155,7 +190,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Profile'
+            $ref: '#/definitions/response.GetMeResponse'
         "400":
           description: Bad Request
           schema:
